# aws-bedrock-code-generator

./: Makefile  README.md  main.py  pyproject.toml  streamlit_app.py
app/: api.py  config.py  models.py  services.py
