[project]
name = "code-gen-chatbot"
version = "0.1.0"
description = "Code Generation Chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.123.10",
    "uvicorn==0.38.0",
    "python-dotenv==1.2.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "boto3==1.42.4",
    "streamlit==1.52.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.5"
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "Q", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
